# sql-converter

./: .coverage  .env  .pre-commit-config.yaml  conftest.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
src/project/: app.py  hi.py
templates/: index.html
tests/: test_app.py  test_hi.py
