[tool.poetry]
name = "sql-converter"
version = "0.1.0"
description = ""
authors = ["Phil Tegg <phil.tegg@bjss.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "3.4.0"
pytest = "7.4.4"
coverage = "7.4.0"
pytest-cov = "4.1.0"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
jinja2 = "^3.1.3"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
